# simgolf-re

./: .gitignore  PLAN_DE_SUIVI.md  README.md  SPECS_TEXTURE_AUTOTILING.md  pyproject.toml  vercel.json
cleaned_c/: MAPPING.md  analyse_variantes_tuiles.md  culling_analysis.md  game_advance_sim.c  game_coursengine.c  game_data_parser.h  game_economy.c  game_economy.h  game_init_state.c  game_init_systems.c  game_loop.c  game_misc.c  game_physics.c  game_scenarios.c  game_scoring_sga.c  game_tilegrid.c  game_tournaments.c  game_ui_statemachine.h  game_ui_system.c  game_vtable_dispatch.h  game_winmain.c  gameplay_architecture.md  golfer_ai_analysis.md  jgld_analysis.md  physics_formulas.md  smooth_interpolator.c  sound_analysis.md  sound_manager.c  terrain_elevation.c  terrain_paths.c  terrain_tileAt.c  terrain_zoom.c  test_game_data_parser.c  tile_struct.h  ui_web_portage.md
docs/: 01-architecture.md  02-terrain.md  03-graphics.md  04-golfers.md  05-physics.md  06-scoring.md  07-tournaments.md  08-economy.md  09-ui.md  10-audio.md  11-animations.md  12-data-formats.md  13-save-system.md  14-scenarios.md  15-asset-inventory.md  16-function-map.md  17-known-unknowns.md  18-trees.md  ANALYSE_OPENGL_DEADCODE.md  ANALYSE_PASSE1_PERSISTANCE.md  ANALYSE_PASSE1_SCENARIOS.md  ANALYSE_PASSE2_SYSTEMIQUE.md  ANALYSE_PASSE4_ACTION.md  ANALYSE_TILE_528.md  BALL_PHYSICS_PORT.md  DataFormatAnalysis.md  GUIDE_GENERATION_TERRAIN.md  GUIDE_REIMPLANTATION.md  PLAN_DE_SUIVI.md  REFERENCE_GUIDE.md  SYNTHESE_GLOBALE.md  VARIANTES_TILES.md  index.md  reference-madcoretom-heightmap.md  (+1 more)
(+26537 files in other folders)
